# CommonLocalizerMetadataTemplates

./: README.md  pyproject.toml
metadata/: metadata_fields.docx  metadata_fields.md
metadata-csv-templates/: behavioural.csv  datasetDescription.csv  electrophysiology.csv  physiological.csv  session.csv  subject.csv  tasks.csv
metadata-odml-templates/: Behavioural.odml  Dataset Description.odml  Electrophysiology.odml  Physiological.odml  Session.odml  Subject.odml  Tasks.odml
metadata-yaml-templates/: Behavioural.yaml  Dataset Description.yaml  Electrophysiology.yaml  Physiological.yaml  Session.yaml  Subject.yaml  Tasks.yaml
scripts/: sheet2doc.py  sheet2md.py
src/: cedar_to_odml.py  odml_to_csv.py  odml_to_json.py  odml_to_yaml.py
templates-csv/in2pb-templates/: dataset-description-templat.csv  electrophysiology-templat.csv  eye-tracking-templat.csv  session-trial-templat.csv  subject-templat.csv  task-event-templat.csv  video-recording-templat.csv
templates-json/in2pb-templates/: dataset-description-template.json  electrophysiology-template.json  eye-tracking-template.json  session-trial-template.json  subject-template.json  task-event-template.json  video-recording-template.json
templates-odml/in2pb-templates/: dataset-description-template.xml  electrophysiology-template.xml  eye-tracking-template.xml  session-trial-template.xml  subject-template.xml  task-event-template.xml  video-recording-template.xml
templates-yaml/in2pb-templates/: dataset-description-template.yaml  electrophysiology-template.yaml  eye-tracking-template.yaml  (+4 more)
